# BSU_OS_labs

./: .gitignore
Lab_1/: README.md  comments.md  condition.md
Lab_1/ConsoleApplication1/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj
Lab_1/Creator/: Creator.cpp  Creator.sln  Creator.vcxproj
Lab_1/Creator/Creator/x64/Debug/: Creator.exe.recipe  Creator.ilk  vc143.idb
Lab_1/Creator/Creator/x64/Debug/Creator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Creator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab_1/Reporter/: Reporter.cpp  Reporter.sln  Reporter.vcxproj
Lab_1/Reporter/Reporter/x64/Debug/: Reporter.exe.recipe  Reporter.ilk  vc143.idb
Lab_1/Reporter/Reporter/x64/Debug/Reporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Reporter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+1 more)
Lab_1/creating_processes/: creating_processes.cpp  creating_processes.sln  creating_processes.vcxproj  creating_processes.vcxproj.filters  report_test  test1
Lab_1/creating_processes/creating.9269604c/x64/Debug/: creating_processes.exe.recipe  creating_processes.ilk  vc143.idb
Lab_2/: comments.md
Lab_2/TestThreads/: test.cpp
Lab_2/creatind_threads/: creatind_threads.cpp  creatind_threads.sln
Lab_2/creatind_threads/creatind_threads/x64/Debug/: creatind_threads.exe.recipe  creatind_threads.ilk  vc143.idb
Lab_2_stdThread/: comments.md
Lab_2_stdThread/UnitTestThread/: UnitTestThread.cpp
Lab_2_stdThread/creating_std_thread/: creating.h  creating_std_thread.cpp  creating_std_thread.sln
Lab_3/: CMakeLists.txt  Lab_3.cpp  Lab_3.sln  condition.md
Lab_3/ThreadSync/src/: Lab_3.cpp  Lab_3.h
Lab_3/ThreadSyncStdThread/: CMakeLists.txt  ThreadSyncStdThread.cpp  ThreadSyncStdThread.h  marker.cpp  marker.h
Lab_3/ThreadSyncWin/: CMakeLists.txt  testMarker.cpp
Lab_31/: CMakeLists.txt  Lab_31.cpp  Lab_31.h
Lab_4/: CMakeLists.txt  condition.md
Lab_4/messageManager/: messageManager.cpp  messageManager.h
Lab_4/receiver/: CMakeLists.txt  receiver.cpp
Lab_4/sender/: CMakeLists.txt  sender.cpp
Lab_4/testManager/: testManager.cpp
Lab_5/: CMakeLists.txt  condition.md
Lab_5/Client/: CMakeLists.txt  Client.cpp  Client.h
Lab_5/ClientServerHead/: CMakeLists.txt  ClientServerHead.cpp  ClientServerHead.h  employee.cpp  employee.h
Lab_5/Server/: CMakeLists.txt  Server.cpp
Lab_5/testClientServer/: CMakeLists.txt  testClientServer.cpp  testClientServer.h  testEmployee.cpp  testReadWrite.cpp
(+18 files in other folders)
